got rid of thumbnails, hopefully the pictures show in the slideSHOW

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -203,40 +203,40 @@ $(document).ready(function () {
                <!-- Sidebar Pic 1 -->
                <div class="active item">
                   <div class="post-info clearfix">
-                      <ul class="thumbnails" style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                      <ul style="border:1px; solid #000">
+                          <li class="span6"><img ng-src="[[ imgs[4] ]]" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
               <!-- Sidebar Pic 2 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul class="thumbnails" style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[5] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                      <ul style="border:1px; solid #000">
+                          <li class="span6"><img ng-src="[[ imgs[5] ]]" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
               <!-- Sidebar Pic 3 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul class="thumbnails" style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[6] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                      <ul style="border:1px; solid #000">
+                          <li class="span6"><img ng-src="[[ imgs[6] ]]" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
               <!-- Sidebar Pic 4 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul class="thumbnails" style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[7] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                      <ul style="border:1px; solid #000">
+                          <li class="span6"><img ng-src="[[ imgs[7] ]]" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
               <!-- Sidebar Pic 5 -->
                <div class="item">
                   <div class="post-info clearfix">
-                      <ul class="thumbnails" style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[8] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                      <ul style="border:1px; solid #000">
+                          <li class="span6"><img ng-src="[[ imgs[8] ]]" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
