fixed fun challenges/fun themes bug

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -151,7 +151,7 @@ $(document).ready(function () {
                     <option value="/">Home</option>
                     <option value="/funruns">Fun Runs</option>
                     <option value="/themes">Fun Themes</option>
-                    <option value="/themes">Fun themes</option>
+                    <option value="/challenges">Fun Challenges</option>
                     <option value="/locations">Fun Locations</option>
                     <option value="/about">About</option>
                 </select>
@@ -204,7 +204,7 @@ $(document).ready(function () {
                <div class="active item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[4] ]]" size="width: 100%"/></li>
+                          <li class="span6"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
@@ -212,7 +212,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[5] ]]" size="width: 100%"/></li>
+                          <li class="span6"><img ng-src="[[ imgs[5] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
@@ -220,7 +220,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[6] ]]" size="width: 100%"/></li>
+                          <li class="span6"><img ng-src="[[ imgs[6] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
@@ -228,7 +228,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[7] ]]" size="width: 100%"/></li>
+                          <li class="span6"><img ng-src="[[ imgs[7] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
@@ -236,7 +236,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span6"><img ng-src="[[ imgs[8] ]]" size="width: 100%"/></li>
+                          <li class="span6"><img ng-src="[[ imgs[8] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
                       </ul>
                   </div>
               </div>
