there was more than one bug with challenges/themes, fixed the third bug

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -135,7 +135,7 @@ $(document).ready(function () {
               <li><a href="/">Home</a></li>
               <li><a href="/funruns">Fun Runs</a></li>
               <li class="active"><a href="/themes">Fun themes</a></li>
-              <li><a href="/themes">Fun Challenges</a></li>
+              <li><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
               <li><a href="/about">About</a></li>
             </ul>
