--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -48,7 +48,7 @@
       // $scope.video_url = $sce.trustAsResourceUrl($scope.run.video_url);
       // $scope.fb_url = $sce.trustAsHtml($scope.run.fb_url);
       $scope.imgs = $scope.theme.imgs;
-      // console.log($scope.run);
+      console.log($scope.theme);
       // console.log($scope.map_url);
       // console.log($scope.video_url);
       console.log($scope.imgs[4]);
