--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -33,6 +33,7 @@
 <script src="{{ url_for('static', filename='angular/angular.js') }}"></script>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script> 
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.flexslider.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
 <script>
