--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -200,7 +200,7 @@ $(document).ready(function () {
 
           <!-- Carousel items -->
           <div class="carousel-inner">
-
+            <center>
                <!-- Sidebar Pic 1 -->
                <div class="active item">
                   <div class="post-info clearfix">
@@ -241,6 +241,7 @@ $(document).ready(function () {
                       </ul>
                   </div>
               </div>
+            </center>
           </div>
       </div>  
 
