Alyssa will get credit for this, since it is being pushed from the vm, (last push of the night from the vm) --Kevin

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -161,7 +161,7 @@
                         <i class="icon-gift"></i><strong>Birthday:</strong> June 25, 1991<br/>
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Alternative<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Dogs, Cats, Friends, Family, Gaming, Movies, TV, Board Games<br/>
-                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe."  -Albert Einstein<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Intelligence is the ability to adapt to change."  -Stephen Hawking<br/>
                     </p>
                 </div>
             </div>
