adding buzz words to theme pages

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -199,6 +199,14 @@ $(document).ready(function () {
             <br/>
         </div>
         
+        <div class="span4 sidebar page-sidebar">
+            <h5 class="title-bg">Buzz Words!</h5>
+            <pre class="quote-text side">[[ runs[2] ]]</pre>
+
+            <br/>
+        </div>
+        
+
         <div class="span8 sidebar page-sidebar"><!-- Begin sidebar column -->
           <h5 class="title-bg">More Pictures
           <button id="btn-blog-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
