fixing buzz words

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -195,13 +195,11 @@ $(document).ready(function () {
         ================================================== -->
 
         <div class="span4 sidebar page-sidebar">
+            <!--Related Runs-->
             <h5 class="title-bg">Related Runs</h5>
             <pre class="quote-text side">[[ runs[0] ]]</pre>
 
-            <br/>
-        </div>
-        
-        <div class="span4 sidebar page-sidebar">
+            <!--Buzz Words-->
             <h5 class="title-bg">Buzz Words!</h5>
             <pre class="quote-text side">[[ runs[2] ]]</pre>
 
