--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -253,7 +253,7 @@ $(document).ready(function () {
 
 
     </div>
-      
+  </div>
   </div><!-- End Bottom Section -->
   
   </div> <!-- End Container -->
