--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -201,7 +201,7 @@ $(document).ready(function () {
 
             <!--Buzz Words-->
             <h5 class="title-bg">Buzz Words!</h5>
-            <pre class="quote-text side">[[ themes.buzzwords ]]</pre>
+            <pre class="quote-text side">[[ theme.buzzwords ]]</pre>
 
             <br/>
         </div>
