Fiddled with pictures and themetempl

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -113,7 +113,7 @@
                           <img src="{{ url_for('static', filename='img/landing/funruns/wipeoutLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5k course<br/>Try out the obstacles from the hit TV show "Wipeout"!</span>
+                      <span class="project-details"><a href="/funruns/0">Wipeout Run</a>5K course<br/>Try out the obstacles from the hit TV show "Wipeout"!</span>
                     </li>
 
                     <!-- Christmas Story -->
