--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -45,20 +45,18 @@
   myApp.controller('ThemeGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
     $http.get("http://104.239.139.43:8000/api/themes/" + {{themeID}}).success(function(data) {
       $scope.theme = data.themes;
-      // $scope.map_url = $sce.trustAsResourceUrl($scope.run.map_url); 
-      // $scope.video_url = $sce.trustAsResourceUrl($scope.run.video_url);
-      // $scope.fb_url = $sce.trustAsHtml($scope.run.fb_url);
       $scope.imgs = $scope.theme.imgs;
-      $scope.runs = $scope.theme.runs;
+      $scope.runsIDX = $scope.theme.funruns;
       console.log($scope.theme);
-      // console.log($scope.map_url);
-      // console.log($scope.video_url);
-      console.log($scope.imgs[4]);
+      console.log($scope.runsIDX[0]);
+      console.log($scope.imgs);
+    });
+    $http.get("http://104.239.139.43:8000/api/funruns").success(function(data) {
+      $scope.runs = data.funruns;
+      console.log($scope.runs);
 
     });
   }]);
-  
-  
 </script>
 
 <script type="text/javascript">
@@ -172,8 +170,6 @@ $(document).ready(function () {
 
     <!-- Title Header -->
         <div class="span8"><!--Begin page content column-->
-
-        <h2>[[theme.name]]</h2>
         
         <!-- Thumbnail Grid
         ================================================== -->
@@ -185,35 +181,29 @@ $(document).ready(function () {
         <p class="lead">[[theme.description]]</p>
 
 
-        <!-- Video Section
-        ================================================== -->
-        <!-- <h3 class="title-bg">Video For Getting Hyped</h3>
-         <iframe ng-src= "[[video_url]]" style="width: 100%; height: 500px; max-height: 500px; frameborder: 0; border: 0"></iframe> -->
         </div> <!--End page content column-->
 
-        <!-- Blog Sidebar
-        ================================================== -->
+    <!-- Blog Sidebar
+    ================================================== -->
 
-        <div class="span4 sidebar page-sidebar">
-            <!--Related Runs-->
-            <h5 class="title-bg">Related Runs</h5>
-            <pre class="quote-text side">[[ runs[0] ]]</pre>
+    <div class="span4 sidebar page-sidebar">
+        <!--Related Runs-->
+        <h5 class="title-bg">Related Runs</h5>
+        <a ng-href="http://104.239.139.43:8000/funruns/[[ runs[runsIDX].id ]]">
+          <p class="quote-text side">[[ runs[runsIDX].name ]]</p>
+        </a>
+        <!--Buzz Words-->
+        <h5 class="title-bg">Buzz Words!</h5>
+        <pre class="quote-text side">[[ theme.buzzwords ]]</pre>
 
-            <!--Buzz Words-->
-            <h5 class="title-bg">Buzz Words!</h5>
-            <pre class="quote-text side">[[ theme.buzzwords ]]</pre>
-
-            <br/>
-        </div>
-        
-
-        <div class="span8 sidebar page-sidebar"><!-- Begin sidebar column -->
-          <h5 class="title-bg">More Pictures
-          <button id="btn-blog-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
-          <button id="btn-blog-prev" class="btn btn-inverse btn-mini" type="button">&laquo;</button>
+        <br/>
+    
+      <h5 class="title-bg">More Pictures
+      <button id="btn-blog-next" class="btn btn-inverse btn-mini" type="button">&raquo;</button>
+      <button id="btn-blog-prev" class="btn btn-inverse btn-mini" type="button">&laquo;</button>
       </h5>
 
-      <div id="blogCarousel" class="carousel slide ">
+      <div id="blogCarousel" class="carousel slide span3">
 
           <!-- Carousel items -->
           <div class="carousel-inner">
@@ -221,7 +211,7 @@ $(document).ready(function () {
                <div class="active item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span8"><img ng-src="[[ imgs[3] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                          <img ng-src="[[ imgs[3] ]]" size="width: 100%"/>
                       </ul>
                   </div>
               </div>
@@ -229,7 +219,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span8"><img ng-src="[[ imgs[4] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                          <img ng-src="[[ imgs[4] ]]" size="width: 100%"/>
                       </ul>
                   </div>
               </div>
@@ -237,7 +227,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span8"><img ng-src="[[ imgs[5] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                          <img ng-src="[[ imgs[5] ]]" size="width: 100%"/>
                       </ul>
                   </div>
               </div>
@@ -245,7 +235,7 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span8"><img ng-src="[[ imgs[6] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                          <img ng-src="[[ imgs[6] ]]" size="width: 100%"/>
                       </ul>
                   </div>
               </div>
@@ -253,14 +243,14 @@ $(document).ready(function () {
                <div class="item">
                   <div class="post-info clearfix">
                       <ul style="border:1px; solid #000">
-                          <li class="span8"><img ng-src="[[ imgs[7] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
+                          <img ng-src="[[ imgs[7] ]]" size="width: 100%"/>
                       </ul>
                   </div>
               </div>
           </div>
       </div>  
 
-        </div><!-- End sidebar column -->
+    </div><!-- End sidebar column -->
 
 
       
