Updated info for Hector

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -205,11 +205,11 @@
                     <h5>Hector Garcia</h5>
                     <p>
                         <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/hektor11"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:hectuanerz@gmail.com"> hectuanerz@gmail.com</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:hectuanerz@gmail.com"> hektor11@utexas.edu</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> August 5, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Spanish Rock, EDM, Hip Hop<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Spanish Rock, EDM, Hip Hop, Classic Rock<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Soccer, Super Smash Brothers, Dragonball<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Every force you create has an echo. Your own bad energy will be your undoing" -Super Gogeta<br/>
                     </p>
