Added to about and fixed some links and got repeats to work

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -110,10 +110,8 @@
     <!-- Title Header -->
     <div class="row">
         <div class="span12">
-            <h2>_(┐「ε:)_</h2>
+            <h2>Our Group: Flask Me Anything</h2>
             <p class="lead">A group of students from the University of Texas, Austin, conquering the world, one Software Engineering Project at a time.<br/>
-                <blockquote>"That's dumb."</blockquote> <cite> -Kurt Bixby</cite></p>
-
             <h3 class="title-bg"> _(┐「ε:)_ &nbsp Meet our team! &nbsp _(┐「ε:)_</h3>
             <div class="row">
                 <div class="span4">
@@ -213,6 +211,21 @@
                         <i class="icon-heart"></i><strong>Loves:</strong> Soccer, Super Smash Brothers, Dragonball<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Every force you create has an echo. Your own bad energy will be your undoing" -Super Gogeta<br/>
                     </p>
+                </div>
+            </div>
+
+            <h3 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
+            <div class="row">
+                <div class="span4">
+                    <li>Flask</li>
+                    <p> DESCRIPTION </p>
+                    <li>Python</li>
+                    <li>nginx</li>
+                    <li>uswgi</li>
+                    <li>Apiary</li>
+                    <li>Github</li>
+                    <li>Rackspace</li>
+                    <li>Bootstrap</li>
                 </div>
             </div>
 
