--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -116,7 +116,7 @@
                             <img src="{{ url_for('static', filename='img/landing/challenges/oddGround1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running On Awkward Ground</a>Examples: Ice, Inflatable Balls, Mud</span>
+                      <span class="project-details"><a href="/challenges/0">Running On Awkward Ground</a>Examples: Ice, Inflatable Balls, Mud</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -128,7 +128,7 @@
                             <img src="{{ url_for('static', filename='img/landing/challenges/costume1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Examples: Mascots, Nude, Speedos, Costumes</span>
+                      <span class="project-details"><a href="/challenges/1">Running In A Costume</a>Examples: Mascots, Nude, Speedos, Costumes</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -140,7 +140,7 @@
                             <img src="{{ url_for('static', filename='img/landing/challenges/cold1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running In Cold Weather</a>Examples: Snow, Ice, Freezing Temperatures</span>
+                      <span class="project-details"><a href="/challenges/2">Running In Cold Weather</a>Examples: Snow, Ice, Freezing Temperatures</span>
                     </li>
                 </ul>
             </div>
