--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -116,7 +116,7 @@
                             <img src="{{ url_for('static', filename='img/landing/themes/holiday1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Holiday</a>Races that celebrate a holiday.</span>
+                      <span class="project-details"><a href="/themes/0">Holiday</a>Races that celebrate a holiday.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -128,7 +128,7 @@
                             <img src="{{ url_for('static', filename='img/landing/themes/intense1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Intense</a>Races that test your endurance.</span>
+                      <span class="project-details"><a href="/themes/1">Intense</a>Races that test your endurance.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -140,7 +140,7 @@
                             <img src="{{ url_for('static', filename='img/landing/themes/costume1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Costume</a>Races where you get to dress up.</span>
+                      <span class="project-details"><a href="/themes/2">Costume</a>Races where you get to dress up.</span>
                     </li>
                 </ul>
             </div>
