--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -46,14 +46,21 @@
     $http.get("http://104.239.139.43:8000/api/themes/" + {{themeID}}).success(function(data) {
       $scope.theme = data.themes;
       $scope.imgs = $scope.theme.imgs;
-      $scope.runsIDX = $scope.theme.funruns;
+      $scope.runsIDs = $scope.theme.funruns;
+      $scope.challengesIDs= $scope.theme.challenges;
       console.log($scope.theme);
-      console.log($scope.runsIDX[0]);
-      console.log($scope.imgs);
+      console.log($scope.runsIDs[0]);
+      console.log($scope.challengesIDs[0]);
+      // console.log($scope.imgs);
     });
     $http.get("http://104.239.139.43:8000/api/funruns").success(function(data) {
       $scope.runs = data.funruns;
       console.log($scope.runs);
+
+    });
+    $http.get("http://104.239.139.43:8000/api/challenges").success(function(data) {
+      $scope.challenges = data.challenges;
+      console.log($scope.challenges);
 
     });
   }]);
@@ -189,9 +196,17 @@ $(document).ready(function () {
     <div class="span4 sidebar page-sidebar">
         <!--Related Runs-->
         <h5 class="title-bg">Related Runs</h5>
-        <a ng-href="http://104.239.139.43:8000/funruns/[[ runs[runsIDX].id ]]">
-          <p class="quote-text side">[[ runs[runsIDX].name ]]</p>
-        </a>
+        <div ng-repeat="ridx in runsIDs">
+          <a ng-href="http://104.239.139.43:8000/funruns/[[ runs[ridx].id ]]">
+            <p class="quote-text side">[[ runs[ridx].name ]]</p>
+          </a>
+        </div>
+        <h5 class="title-bg">Related Challenges</h5>
+        <div ng-repeat="cidx in challengesIDs">
+          <a ng-href="http://104.239.139.43:8000/challenges/[[ challenges[cidx].id ]]">
+            <p class="quote-text side">[[ challenges[cidx].name ]]</p>
+          </a>
+        </div>
         <!--Buzz Words-->
         <h5 class="title-bg">Buzz Words!</h5>
         <pre class="quote-text side">[[ theme.buzzwords ]]</pre>
