--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -121,37 +121,31 @@
 
                     <!-- Gallery Item 1 -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/baltimoreMDLanding.jpg') }}" alt="Gallery">
                         </div>
-                      </a>
                       <span class="project-details"><a href="gallery-single.htm">Baltimore, Maryland</a>The Charm City.</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
                     <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
-                      <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/clevelandOHLanding.jpg') }}" alt="Gallery">
                         </div>
-                      </a>
                       <span class="project-details"><a href="gallery-single.htm">Cleveland, Ohio</a>The Forest City.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
                     <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
-                      <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/dallasTXLanding.jpg') }}" alt="Gallery">
                         </div>
-                      </a>
                       <span class="project-details"><a href="gallery-single.htm">Dallas, Texas</a>Home of the Cowboys.</span>
                     </li>
                 </ul>
@@ -177,7 +171,7 @@
   <!-- Footer Area
   ================================================== -->
 
-  <div class="footer-container"><!-- Begin Footer -->
+  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
       <div class="container">
           <div class="row footer-row">
                 <div class="span3 footer-col">
