--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -166,7 +166,7 @@
   <!-- Footer Area
   ================================================== -->
 
-  <div class="footer-container"><!-- Begin Footer -->
+  <div class="footer-container hidden-phone hidden-tablet"><!-- Begin Footer -->
       <div class="container">
           <div class="row footer-row">
                 <div class="span3 footer-col">
