--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -143,9 +143,7 @@ $(document).ready(function () {
             <!-- <a href="#"><i class="icon-plus-sign"></i>Read More</a>  -->
         </div>
     </div><!-- End Headline -->
-    <div class="span12">
-      <p> Explanation about this site </p>
-    </div>
+ 
   
     <div class="row"><!-- Begin Bottom Section -->
   
@@ -208,47 +206,38 @@ $(document).ready(function () {
     ================================================== -->
     <div class="span6">
 
-        <h6 class="title-bg">Our Team: <small>Austin Isms</small></h6>
+         <h5 class="title-bg">Featured run
+            <small></small>
+        </h5>
 
-            <div class="accordion" id="accordion2">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-                        Collapsible Group Item #1
-                        </a>
-                    </div>
-                    <div id="collapseOne" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
-                        </div>
-                    </div>
-                </div>
+        <!-- Client Testimonial Slider-->
+        <div id="clientCarousel" class="carousel slide no-margin">
+        <!-- Carousel items -->
+        <div class="carousel-inner">
 
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-                        Collapsible Group Item #2
-                        </a>
-                    </div>
-                    <div id="collapseTwo" class="accordion-body collapse">
-                        <div class="accordion-inner">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
-                        </div>
-                    </div>
-                </div>
+               <!-- Blog Item 1 -->
+              <div class="active item">
+                  <a href="funruns/0"><img src="{{ url_for('static', filename='img/landing/funruns/wipeoutLanding.jpg') }}" alt="" class="align-left blog-thumb-preview" width=40% height=40%/></a>
+                  <div class="post-info clearfix">
+                      <h4><a href="funruns/0">Wipeout Run</a></h4>
+                      <ul class="blog-details-preview">
+                          <li><i class="icon-calendar"></i><strong>Posted on:</strong> March 24, 2015<li>
+                          <li><i class="icon-comment"></i><strong>Description:</strong> Crash, smash, and splash your way through a 5k course with larger-than-life obstacles and elements inspired by the hit TV show Wipeout! Take on the infamous Big Balls, Sweeper, Wrecking Balls, and Happy Endings! Hilarious thrills and magnificent spills await!<li>
 
-                 <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-                        Collapsible Group Item #3
-                        </a>
-                    </div>
-                    <div id="collapseThree" class="accordion-body collapse">
-                        <div class="accordion-inner">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS. 
-                        </div>
-                    </div>
-                </div>
+                      </ul>
+                  </div>
+              </div>
+
+            <div class="item">
+                <p class="quote-text">"Adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices. Vivamus nec lectus sed orci molestie molestie."<cite>- Another Client Name, Company Name</cite></p>
+            </div>
+
+            <div class="item">
+                <p class="quote-text">"Mauris eget tellus sem. Cras sollicitudin sem eu elit aliquam quis condimentum nulla suscipit. Nam sed magna ante. Ut eget suscipit mauris."<cite>- On More Client, The Company</cite></p>
+            </div>
+            
+        </div>
+        </div>
 
 
 
