--- a/app/templates/challengetempl.html
+++ b/app/templates/challengetempl.html
@@ -44,14 +44,21 @@
   myApp.controller('ChallengeGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
     $http.get("http://104.239.139.43:8000/api/challenges/" + {{challengeID}}).success(function(data) {
       $scope.challenge = data.challenges;
-      // $scope.map_url = $sce.trustAsResourceUrl($scope.run.map_url); 
-      // $scope.video_url = $sce.trustAsResourceUrl($scope.run.video_url);
-      // $scope.fb_url = $sce.trustAsHtml($scope.run.fb_url);
       $scope.imgs = $scope.challenge.imgs;
-      // console.log($scope.run);
-      // console.log($scope.map_url);
-      // console.log($scope.video_url);
+
+      $scope.runsIDs = $scope.challenge.funruns;
+      $scope.themesIDs = $scope.challenge.themes;
       console.log($scope.imgs[0]);
+
+    });
+    $http.get("http://104.239.139.43:8000/api/funruns").success(function(data) {
+      $scope.runs = data.funruns;
+      console.log($scope.runs);
+
+    });
+    $http.get("http://104.239.139.43:8000/api/themes").success(function(data) {
+      $scope.themes = data.themes;
+      console.log($scope.themes);
 
     });
   }]);
@@ -185,12 +192,28 @@ $(document).ready(function () {
          <iframe ng-src= "[[video_url]]" style="width: 100%; height: 500px; max-height: 500px; frameborder: 0; border: 0"></iframe> -->
         </div> <!--End page content column-->
 
-        <!-- Blog Sidebar
-        ================================================== --> 
-        <div class="span4 sidebar page-sidebar"><!-- Begin sidebar column -->
+      <!-- Blog Sidebar
+      ================================================== --> 
+      <div class="span4 sidebar page-sidebar"><!--Begin Sidebar-->
+          <!--Related Runs-->
+          <h5 class="title-bg">Related Runs</h5>
+          <div ng-repeat="ridx in runsIDs">
+            <a ng-href="http://104.239.139.43:8000/funruns/[[ runs[ridx].id ]]">
+              <p class="quote-text side">[[ runs[ridx].name ]]</p>
+            </a>
+          </div>
+          <h5 class="title-bg">Related Challenges</h5>
+          <div ng-repeat="tidx in themesIDs">
+            <a ng-href="http://104.239.139.43:8000/themes/[[ themes[tidx].id ]]">
+              <p class="quote-text side">[[ themes[tidx].name ]]</p>
+            </a>
+          </div>
+          <!--Buzz Words-->
+          <h5 class="title-bg">Examples</h5>
+          <pre class="quote-text side">[[ challenge.flavors ]]</pre>
 
-
-        </div><!-- End sidebar column -->
+          <br/>
+      </div>
 
     </div><!-- End container row -->
     
