Moved models.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -126,20 +126,22 @@ $(document).ready(function () {
     
       <!-- Slider Carousel
         ================================================== -->
-        <div class="span8">
+        <div class="span7">
           <div class="flexslider">
               <ul class="slides">
-                <li><a href="/funruns/2"><img src="{{ url_for('static', filename='img/indexCarousel/indexImg1.jpg') }}" alt="slider" /></a></li>
+                <li><a href="/funruns/2"><img src="{{ url_for('static', filename='img/index/indexImg1.jpg') }}" alt="slider" /></a></li>
+                <li><a href="/funruns/2"><img src="{{ url_for('static', filename='img/index/indexImg2.jpg') }}" alt="slider" /></a></li>
+                <li><a href="/funruns/2"><img src="{{ url_for('static', filename='img/index/indexImg3.jpg') }}" alt="slider" /></a></li>
               </ul>
             </div>
         </div>
         
         <!-- Headline Text
         ================================================== -->
-        <div class="span4">
+        <div class="span5">
           <h2>2015 Fun Runs of America</h2>
             <p class="lead">Bored of your basic, boring 5K race? <br/><br/>We understand. You're looking for something a little more on the wild side. <br/><br/>Or maybe you're just itching to be covered in mud, carrying your wife, eating pizza, and baring it all when you run.<br/><br/></p>
-            <p class="lead" align="center"><strong>Itch no longer.</strong></p>
+            <h1 align="center"><strong>Itch no longer.</strong></h1>
             <!-- <a href="#"><i class="icon-plus-sign"></i>Read More</a>  -->
         </div>
     </div><!-- End Headline -->
